[package]
name = "fast-socks5"
version = "1.0.0-rc.0"
edition = "2021"
license = "MIT"
description = "Fast SOCKS5 client/server implementation written in Rust async/.await (tokio)"
repository = "https://github.com/dizda/fast-socks5"

[features]
default = []
socks4 = []

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["full"] } # Thay bằng feature full để bao gồm mọi thứ
anyhow = "1"
thiserror = "1"
tokio-stream = "0.1"
async-trait = "0.1"
socket2 = "0.5.8"
structopt = "0.3" 

[dev-dependencies]
env_logger = "0.9"
tokio-test = "0.4"

[[example]]
name = "server"
required-features = [] 

[[example]]
name = "client"

[[example]]
name = "custom_auth_server"

[[example]]
name = "router"

[[example]]
name = "server_auth_once" 
required-features = []

[[example]]
name = "docker_auth_once"
required-features = []
